// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button base 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    default
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    red
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    green
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    yellow
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __second __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    second
  </button>
</div>
`;

exports[`Button block 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __block __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    block
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __large __block __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    block
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __large __block __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    block
  </button>
</div>
`;

exports[`Button circle 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __large __circle __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    丑
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __circle __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    亥
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __small __circle __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    卯
  </button>
</div>
`;

exports[`Button disabled 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    default
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    red
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    green
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    yellow
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __second __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    second
  </button>
</div>
`;

exports[`Button icon 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="m78 m78-icon m78-icon_icon-tag"
      data-name="icon-tag"
      focusable={false}
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 9c0-.55-.45-1-1-1h-3V5c0-.55-.45-1-1-1s-1 .45-1 1v3h-4V5c0-.55-.45-1-1-1s-1 .45-1 1v3H5c-.55 0-1 .45-1 1s.45 1 1 1h3v4H5c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h4v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3v-4h3c.55 0 1-.45 1-1zm-6 5h-4v-4h4v4z"
      />
    </svg>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="m78 m78-icon m78-icon_icon-beach-access"
      data-name="icon-beach-access"
      focusable={false}
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m13.13 14.56 1.43-1.43 5.73 5.73c.39.39.39 1.03 0 1.43-.39.39-1.03.39-1.43 0l-5.73-5.73zm4.29-5.73 1.27-1.27c.89-.89.77-2.43-.31-3.08a10.1 10.1 0 0 0-12.4 1.47c3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.36 3.37-3.85 8.51-1.48 12.4.66 1.08 2.19 1.21 3.08.31l1.27-1.27C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
      />
    </svg>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __icon __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="m78 m78-icon m78-icon_icon-brightness-7"
      data-name="icon-brightness-7"
      focusable={false}
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 8.69V5c0-.55-.45-1-1-1h-3.69l-2.6-2.6a.996.996 0 0 0-1.41 0L8.69 4H5c-.55 0-1 .45-1 1v3.69l-2.6 2.6a.996.996 0 0 0 0 1.41L4 15.3V19c0 .55.45 1 1 1h3.69l2.6 2.6c.39.39 1.02.39 1.41 0l2.6-2.6H19c.55 0 1-.45 1-1v-3.69l2.6-2.6a.996.996 0 0 0 0-1.41L20 8.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
      />
    </svg>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="m78 m78-icon m78-icon_icon-catching-pokemon"
      data-name="icon-catching-pokemon"
      focusable={false}
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.5 12a2.5 2.5 0 0 1-5 0 2.5 2.5 0 0 1 5 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
      />
    </svg>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="m78 m78-icon m78-icon_icon-ac-unit"
      data-name="icon-ac-unit"
      focusable={false}
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 11h-3.17l2.54-2.54a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0L15 11h-2V9l3.95-3.95c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0L13 6.17V3c0-.55-.45-1-1-1s-1 .45-1 1v3.17L8.46 3.63a.996.996 0 0 0-1.41 0c-.39.39-.39 1.03 0 1.42L11 9v2H9L5.05 7.05c-.39-.39-1.03-.39-1.42 0a.996.996 0 0 0 0 1.41L6.17 11H3c-.55 0-1 .45-1 1s.45 1 1 1h3.17l-2.54 2.54a.996.996 0 0 0 0 1.41c.39.39 1.03.39 1.42 0L9 13h2v2l-3.95 3.95c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0L11 17.83V21c0 .55.45 1 1 1s1-.45 1-1v-3.17l2.54 2.54c.39.39 1.02.39 1.41 0 .39-.39.39-1.03 0-1.42L13 15v-2h2l3.95 3.95c.39.39 1.03.39 1.42 0a.996.996 0 0 0 0-1.41L17.83 13H21c.55 0 1-.45 1-1s-.45-1-1-1z"
      />
    </svg>
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __icon"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    李
  </button>
  <div
    className="mt-16"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-beach-access"
        data-name="icon-beach-access"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.13 14.56 1.43-1.43 5.73 5.73c.39.39.39 1.03 0 1.43-.39.39-1.03.39-1.43 0l-5.73-5.73zm4.29-5.73 1.27-1.27c.89-.89.77-2.43-.31-3.08a10.1 10.1 0 0 0-12.4 1.47c3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.36 3.37-3.85 8.51-1.48 12.4.66 1.08 2.19 1.21 3.08.31l1.27-1.27C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-catching-pokemon"
        data-name="icon-catching-pokemon"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.5 12a2.5 2.5 0 0 1-5 0 2.5 2.5 0 0 1 5 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __large __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-face-retouching-natural"
        data-name="icon-face-retouching-natural"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.01 4.05 20.6 3.4l-.65-1.41a.5.5 0 0 0-.91 0L18.4 3.4l-1.41.65a.5.5 0 0 0 0 .91l1.41.64.65 1.41a.5.5 0 0 0 .91 0l.64-1.41 1.41-.65c.39-.17.39-.73 0-.9z"
        />
        <circle
          cx={9}
          cy={13}
          r={1.25}
        />
        <circle
          cx={15}
          cy={13}
          r={1.25}
        />
        <path
          d="M19.5 8.8c-.78 0-1.49-.46-1.82-1.17l-.41-.9-.9-.41A2.014 2.014 0 0 1 15.2 4.5c0-.66.34-1.26.87-1.63C14.83 2.32 13.45 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.45-.32-2.83-.87-4.07-.37.53-.97.87-1.63.87zM12 20c-4.41 0-8-3.59-8-8 0-.05.01-.1 0-.14 2.6-.98 4.69-2.99 5.74-5.55A10 10 0 0 0 17.5 10c.75 0 1.47-.09 2.17-.24.21.71.33 1.46.33 2.24 0 4.41-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
  <div
    className="mt-16"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __outline __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-beach-access"
        data-name="icon-beach-access"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.13 14.56 1.43-1.43 5.73 5.73c.39.39.39 1.03 0 1.43-.39.39-1.03.39-1.43 0l-5.73-5.73zm4.29-5.73 1.27-1.27c.89-.89.77-2.43-.31-3.08a10.1 10.1 0 0 0-12.4 1.47c3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.36 3.37-3.85 8.51-1.48 12.4.66 1.08 2.19 1.21 3.08.31l1.27-1.27C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __outline __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-catching-pokemon"
        data-name="icon-catching-pokemon"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.5 12a2.5 2.5 0 0 1-5 0 2.5 2.5 0 0 1 5 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __large __outline __icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-face-retouching-natural"
        data-name="icon-face-retouching-natural"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.01 4.05 20.6 3.4l-.65-1.41a.5.5 0 0 0-.91 0L18.4 3.4l-1.41.65a.5.5 0 0 0 0 .91l1.41.64.65 1.41a.5.5 0 0 0 .91 0l.64-1.41 1.41-.65c.39-.17.39-.73 0-.9z"
        />
        <circle
          cx={9}
          cy={13}
          r={1.25}
        />
        <circle
          cx={15}
          cy={13}
          r={1.25}
        />
        <path
          d="M19.5 8.8c-.78 0-1.49-.46-1.82-1.17l-.41-.9-.9-.41A2.014 2.014 0 0 1 15.2 4.5c0-.66.34-1.26.87-1.63C14.83 2.32 13.45 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.45-.32-2.83-.87-4.07-.37.53-.97.87-1.63.87zM12 20c-4.41 0-8-3.59-8-8 0-.05.01-.1 0-.14 2.6-.98 4.69-2.99 5.74-5.55A10 10 0 0 0 17.5 10c.75 0 1.47-.09 2.17-.24.21.71.33 1.46.33 2.24 0 4.41-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
  <div
    className="mt-16"
  >
    方型图标按钮, 占用空间更小
  </div>
  <div
    className="mt-16"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __icon __square-icon __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-beach-access"
        data-name="icon-beach-access"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.13 14.56 1.43-1.43 5.73 5.73c.39.39.39 1.03 0 1.43-.39.39-1.03.39-1.43 0l-5.73-5.73zm4.29-5.73 1.27-1.27c.89-.89.77-2.43-.31-3.08a10.1 10.1 0 0 0-12.4 1.47c3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.36 3.37-3.85 8.51-1.48 12.4.66 1.08 2.19 1.21 3.08.31l1.27-1.27C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __icon __square-icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-brightness-7"
        data-name="icon-brightness-7"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 8.69V5c0-.55-.45-1-1-1h-3.69l-2.6-2.6a.996.996 0 0 0-1.41 0L8.69 4H5c-.55 0-1 .45-1 1v3.69l-2.6 2.6a.996.996 0 0 0 0 1.41L4 15.3V19c0 .55.45 1 1 1h3.69l2.6 2.6c.39.39 1.02.39 1.41 0l2.6-2.6H19c.55 0 1-.45 1-1v-3.69l2.6-2.6a.996.996 0 0 0 0-1.41L20 8.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __icon __square-icon __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-catching-pokemon"
        data-name="icon-catching-pokemon"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.5 12a2.5 2.5 0 0 1-5 0 2.5 2.5 0 0 1 5 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __large __icon __square-icon __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-face-retouching-natural"
        data-name="icon-face-retouching-natural"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.01 4.05 20.6 3.4l-.65-1.41a.5.5 0 0 0-.91 0L18.4 3.4l-1.41.65a.5.5 0 0 0 0 .91l1.41.64.65 1.41a.5.5 0 0 0 .91 0l.64-1.41 1.41-.65c.39-.17.39-.73 0-.9z"
        />
        <circle
          cx={9}
          cy={13}
          r={1.25}
        />
        <circle
          cx={15}
          cy={13}
          r={1.25}
        />
        <path
          d="M19.5 8.8c-.78 0-1.49-.46-1.82-1.17l-.41-.9-.9-.41A2.014 2.014 0 0 1 15.2 4.5c0-.66.34-1.26.87-1.63C14.83 2.32 13.45 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.45-.32-2.83-.87-4.07-.37.53-.97.87-1.63.87zM12 20c-4.41 0-8-3.59-8-8 0-.05.01-.1 0-.14 2.6-.98 4.69-2.99 5.74-5.55A10 10 0 0 0 17.5 10c.75 0 1.47-.09 2.17-.24.21.71.33 1.46.33 2.24 0 4.41-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
  <div
    className="mt-16"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __outline __icon __square-icon __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-beach-access"
        data-name="icon-beach-access"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.13 14.56 1.43-1.43 5.73 5.73c.39.39.39 1.03 0 1.43-.39.39-1.03.39-1.43 0l-5.73-5.73zm4.29-5.73 1.27-1.27c.89-.89.77-2.43-.31-3.08a10.1 10.1 0 0 0-12.4 1.47c3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.36 3.37-3.85 8.51-1.48 12.4.66 1.08 2.19 1.21 3.08.31l1.27-1.27C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __outline __icon __square-icon"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-brightness-7"
        data-name="icon-brightness-7"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 8.69V5c0-.55-.45-1-1-1h-3.69l-2.6-2.6a.996.996 0 0 0-1.41 0L8.69 4H5c-.55 0-1 .45-1 1v3.69l-2.6 2.6a.996.996 0 0 0 0 1.41L4 15.3V19c0 .55.45 1 1 1h3.69l2.6 2.6c.39.39 1.02.39 1.41 0l2.6-2.6H19c.55 0 1-.45 1-1v-3.69l2.6-2.6a.996.996 0 0 0 0-1.41L20 8.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __outline __icon __square-icon __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-catching-pokemon"
        data-name="icon-catching-pokemon"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.5 12a2.5 2.5 0 0 1-5 0 2.5 2.5 0 0 1 5 0zm7.5 0c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zm-2 0h-4c0-2.21-1.79-4-4-4s-4 1.79-4 4H4c0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __large __outline __icon __square-icon __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-face-retouching-natural"
        data-name="icon-face-retouching-natural"
        focusable={false}
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.01 4.05 20.6 3.4l-.65-1.41a.5.5 0 0 0-.91 0L18.4 3.4l-1.41.65a.5.5 0 0 0 0 .91l1.41.64.65 1.41a.5.5 0 0 0 .91 0l.64-1.41 1.41-.65c.39-.17.39-.73 0-.9z"
        />
        <circle
          cx={9}
          cy={13}
          r={1.25}
        />
        <circle
          cx={15}
          cy={13}
          r={1.25}
        />
        <path
          d="M19.5 8.8c-.78 0-1.49-.46-1.82-1.17l-.41-.9-.9-.41A2.014 2.014 0 0 1 15.2 4.5c0-.66.34-1.26.87-1.63C14.83 2.32 13.45 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.45-.32-2.83-.87-4.07-.37.53-.97.87-1.63.87zM12 20c-4.41 0-8-3.59-8-8 0-.05.01-.1 0-.14 2.6-.98 4.69-2.99 5.74-5.55A10 10 0 0 0 17.5 10c.75 0 1.47-.09 2.17-.24.21.71.33 1.46.33 2.24 0 4.41-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
  <div
    className="mt-16"
  >
    <div
      className="mb-16"
    >
      文字图标混排
    </div>
    <button
      className="m78 m78-init m78-btn m78-effect __md"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-beach-access"
        data-name="icon-beach-access"
        focusable={false}
        height={24}
        style={
          Object {
            "marginRight": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.13 14.56 1.43-1.43 5.73 5.73c.39.39.39 1.03 0 1.43-.39.39-1.03.39-1.43 0l-5.73-5.73zm4.29-5.73 1.27-1.27c.89-.89.77-2.43-.31-3.08a10.1 10.1 0 0 0-12.4 1.47c3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.36 3.37-3.85 8.51-1.48 12.4.66 1.08 2.19 1.21 3.08.31l1.27-1.27C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
        />
      </svg>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-ac-unit"
        data-name="icon-ac-unit"
        focusable={false}
        height={24}
        style={
          Object {
            "marginRight": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 11h-3.17l2.54-2.54a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0L15 11h-2V9l3.95-3.95c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0L13 6.17V3c0-.55-.45-1-1-1s-1 .45-1 1v3.17L8.46 3.63a.996.996 0 0 0-1.41 0c-.39.39-.39 1.03 0 1.42L11 9v2H9L5.05 7.05c-.39-.39-1.03-.39-1.42 0a.996.996 0 0 0 0 1.41L6.17 11H3c-.55 0-1 .45-1 1s.45 1 1 1h3.17l-2.54 2.54a.996.996 0 0 0 0 1.41c.39.39 1.03.39 1.42 0L9 13h2v2l-3.95 3.95c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0L11 17.83V21c0 .55.45 1 1 1s1-.45 1-1v-3.17l2.54 2.54c.39.39 1.02.39 1.41 0 .39-.39.39-1.03 0-1.42L13 15v-2h2l3.95 3.95c.39.39 1.03.39 1.42 0a.996.996 0 0 0 0-1.41L17.83 13H21c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-beach-access"
        data-name="icon-beach-access"
        focusable={false}
        height={24}
        style={
          Object {
            "marginRight": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m13.13 14.56 1.43-1.43 5.73 5.73c.39.39.39 1.03 0 1.43-.39.39-1.03.39-1.43 0l-5.73-5.73zm4.29-5.73 1.27-1.27c.89-.89.77-2.43-.31-3.08a10.1 10.1 0 0 0-12.4 1.47c3.93-1.3 8.31-.25 11.44 2.88zM5.95 5.98c-3.36 3.37-3.85 8.51-1.48 12.4.66 1.08 2.19 1.21 3.08.31l1.27-1.27C5.7 14.29 4.65 9.91 5.95 5.98zm.02-.02-.01.01c-.38 3.01 1.17 6.88 4.3 10.02l5.73-5.73c-3.13-3.13-7.01-4.68-10.02-4.3z"
        />
      </svg>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-face-retouching-natural"
        data-name="icon-face-retouching-natural"
        focusable={false}
        height={24}
        style={
          Object {
            "marginRight": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22.01 4.05 20.6 3.4l-.65-1.41a.5.5 0 0 0-.91 0L18.4 3.4l-1.41.65a.5.5 0 0 0 0 .91l1.41.64.65 1.41a.5.5 0 0 0 .91 0l.64-1.41 1.41-.65c.39-.17.39-.73 0-.9z"
        />
        <circle
          cx={9}
          cy={13}
          r={1.25}
        />
        <circle
          cx={15}
          cy={13}
          r={1.25}
        />
        <path
          d="M19.5 8.8c-.78 0-1.49-.46-1.82-1.17l-.41-.9-.9-.41A2.014 2.014 0 0 1 15.2 4.5c0-.66.34-1.26.87-1.63C14.83 2.32 13.45 2 12 2 6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10c0-1.45-.32-2.83-.87-4.07-.37.53-.97.87-1.63.87zM12 20c-4.41 0-8-3.59-8-8 0-.05.01-.1 0-.14 2.6-.98 4.69-2.99 5.74-5.55A10 10 0 0 0 17.5 10c.75 0 1.47-.09 2.17-.24.21.71.33 1.46.33 2.24 0 4.41-3.59 8-8 8z"
        />
      </svg>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __orange __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-ac-unit"
        data-name="icon-ac-unit"
        focusable={false}
        height={24}
        style={
          Object {
            "marginRight": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 11h-3.17l2.54-2.54a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0L15 11h-2V9l3.95-3.95c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0L13 6.17V3c0-.55-.45-1-1-1s-1 .45-1 1v3.17L8.46 3.63a.996.996 0 0 0-1.41 0c-.39.39-.39 1.03 0 1.42L11 9v2H9L5.05 7.05c-.39-.39-1.03-.39-1.42 0a.996.996 0 0 0 0 1.41L6.17 11H3c-.55 0-1 .45-1 1s.45 1 1 1h3.17l-2.54 2.54a.996.996 0 0 0 0 1.41c.39.39 1.03.39 1.42 0L9 13h2v2l-3.95 3.95c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0L11 17.83V21c0 .55.45 1 1 1s1-.45 1-1v-3.17l2.54 2.54c.39.39 1.02.39 1.41 0 .39-.39.39-1.03 0-1.42L13 15v-2h2l3.95 3.95c.39.39 1.03.39 1.42 0a.996.996 0 0 0 0-1.41L17.83 13H21c.55 0 1-.45 1-1s-.45-1-1-1z"
        />
      </svg>
      按钮
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="m78 m78-icon m78-icon_icon-brightness-7"
        data-name="icon-brightness-7"
        focusable={false}
        height={24}
        style={
          Object {
            "marginRight": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 8.69V5c0-.55-.45-1-1-1h-3.69l-2.6-2.6a.996.996 0 0 0-1.41 0L8.69 4H5c-.55 0-1 .45-1 1v3.69l-2.6 2.6a.996.996 0 0 0 0 1.41L4 15.3V19c0 .55.45 1 1 1h3.69l2.6 2.6c.39.39 1.02.39 1.41 0l2.6-2.6H19c.55 0 1-.45 1-1v-3.69l2.6-2.6a.996.996 0 0 0 0-1.41L20 8.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
        />
      </svg>
      文本
      <svg
        className="m78 m78-icon m78-icon_icon-tag"
        data-name="icon-tag"
        focusable={false}
        height={24}
        style={
          Object {
            "marginLeft": 4,
            "marginRight": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 9c0-.55-.45-1-1-1h-3V5c0-.55-.45-1-1-1s-1 .45-1 1v3h-4V5c0-.55-.45-1-1-1s-1 .45-1 1v3H5c-.55 0-1 .45-1 1s.45 1 1 1h3v4H5c-.55 0-1 .45-1 1s.45 1 1 1h3v3c0 .55.45 1 1 1s1-.45 1-1v-3h4v3c0 .55.45 1 1 1s1-.45 1-1v-3h3c.55 0 1-.45 1-1s-.45-1-1-1h-3v-4h3c.55 0 1-.45 1-1zm-6 5h-4v-4h4v4z"
        />
      </svg>
      文本
      <svg
        className="m78 m78-icon m78-icon_icon-brightness-7"
        data-name="icon-brightness-7"
        focusable={false}
        height={24}
        style={
          Object {
            "marginLeft": 4,
          }
        }
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 8.69V5c0-.55-.45-1-1-1h-3.69l-2.6-2.6a.996.996 0 0 0-1.41 0L8.69 4H5c-.55 0-1 .45-1 1v3.69l-2.6 2.6a.996.996 0 0 0 0 1.41L4 15.3V19c0 .55.45 1 1 1h3.69l2.6 2.6c.39.39 1.02.39 1.41 0l2.6-2.6H19c.55 0 1-.45 1-1v-3.69l2.6-2.6a.996.996 0 0 0 0-1.41L20 8.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Button link 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __text __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <a
    className="m78 m78-init m78-btn m78-effect __md __primary __text"
    disabled={false}
    href="https://www.google.com"
    onClick={[Function]}
  >
    link↗
  </a>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    link
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __text"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
</div>
`;

exports[`Button loading 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __second __large __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="m78 m78-spin __small __full"
      style={
        Object {
          "__progress": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="m78-spin_inner"
        style={
          Object {
            "top": undefined,
          }
        }
      >
        <svg
          className="m78-spin-svg m78-spin_unit"
          fill="transparent"
          height={200}
          viewBox="0 0 200 200"
          width={200}
        >
          <circle
            className="m78-spin-svg_bg"
            cx={100}
            cy={100}
            r={70}
            strokeWidth={60}
          />
          <circle
            cx={100}
            cy={100}
            r={70}
            stroke="url(#Gradient1)"
            strokeDasharray="628.3185307179587 628.3185307179587"
            strokeLinecap="round"
            strokeWidth={60}
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="5s"
              repeatCount="indefinite"
              values="628.3185307179587;0;628.3185307179587"
            />
          </circle>
          <defs>
            <linearGradient
              id="Gradient1"
            >
              <stop
                className="m78-spin-svg_stop1"
                offset="0%"
              />
              <stop
                className="m78-spin-svg_stop2"
                offset="100%"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
    </div>
    click
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __light __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="m78 m78-spin __small __full"
      style={
        Object {
          "__progress": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="m78-spin_inner"
        style={
          Object {
            "top": undefined,
          }
        }
      >
        <svg
          className="m78-spin-svg m78-spin_unit"
          fill="transparent"
          height={200}
          viewBox="0 0 200 200"
          width={200}
        >
          <circle
            className="m78-spin-svg_bg"
            cx={100}
            cy={100}
            r={70}
            strokeWidth={60}
          />
          <circle
            cx={100}
            cy={100}
            r={70}
            stroke="url(#Gradient1)"
            strokeDasharray="628.3185307179587 628.3185307179587"
            strokeLinecap="round"
            strokeWidth={60}
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="5s"
              repeatCount="indefinite"
              values="628.3185307179587;0;628.3185307179587"
            />
          </circle>
          <defs>
            <linearGradient
              id="Gradient1"
            >
              <stop
                className="m78-spin-svg_stop1"
                offset="0%"
              />
              <stop
                className="m78-spin-svg_stop2"
                offset="100%"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
    </div>
    click
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __small __disabled"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="m78 m78-spin __small __full"
      style={
        Object {
          "__progress": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "visibility": "hidden",
        }
      }
    >
      <div
        className="m78-spin_inner"
        style={
          Object {
            "top": undefined,
          }
        }
      >
        <svg
          className="m78-spin-svg m78-spin_unit"
          fill="transparent"
          height={200}
          viewBox="0 0 200 200"
          width={200}
        >
          <circle
            className="m78-spin-svg_bg"
            cx={100}
            cy={100}
            r={70}
            strokeWidth={60}
          />
          <circle
            cx={100}
            cy={100}
            r={70}
            stroke="url(#Gradient1)"
            strokeDasharray="628.3185307179587 628.3185307179587"
            strokeLinecap="round"
            strokeWidth={60}
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="5s"
              repeatCount="indefinite"
              values="628.3185307179587;0;628.3185307179587"
            />
          </circle>
          <defs>
            <linearGradient
              id="Gradient1"
            >
              <stop
                className="m78-spin-svg_stop1"
                offset="0%"
              />
              <stop
                className="m78-spin-svg_stop2"
                offset="100%"
              />
            </linearGradient>
          </defs>
        </svg>
      </div>
    </div>
    click
  </button>
  <div
    className="mt-8"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __large __circle __light __disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="m78 m78-spin __small __full"
        style={
          Object {
            "__progress": 0,
            "opacity": 0,
            "pointerEvents": "none",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="m78-spin_inner"
          style={
            Object {
              "top": undefined,
            }
          }
        >
          <svg
            className="m78-spin-svg m78-spin_unit"
            fill="transparent"
            height={200}
            viewBox="0 0 200 200"
            width={200}
          >
            <circle
              className="m78-spin-svg_bg"
              cx={100}
              cy={100}
              r={70}
              strokeWidth={60}
            />
            <circle
              cx={100}
              cy={100}
              r={70}
              stroke="url(#Gradient1)"
              strokeDasharray="628.3185307179587 628.3185307179587"
              strokeLinecap="round"
              strokeWidth={60}
            >
              <animate
                attributeName="stroke-dashoffset"
                dur="5s"
                repeatCount="indefinite"
                values="628.3185307179587;0;628.3185307179587"
              />
            </circle>
            <defs>
              <linearGradient
                id="Gradient1"
              >
                <stop
                  className="m78-spin-svg_stop1"
                  offset="0%"
                />
                <stop
                  className="m78-spin-svg_stop2"
                  offset="100%"
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
      </div>
      申
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __circle __light __disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="m78 m78-spin __small __full"
        style={
          Object {
            "__progress": 0,
            "opacity": 0,
            "pointerEvents": "none",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="m78-spin_inner"
          style={
            Object {
              "top": undefined,
            }
          }
        >
          <svg
            className="m78-spin-svg m78-spin_unit"
            fill="transparent"
            height={200}
            viewBox="0 0 200 200"
            width={200}
          >
            <circle
              className="m78-spin-svg_bg"
              cx={100}
              cy={100}
              r={70}
              strokeWidth={60}
            />
            <circle
              cx={100}
              cy={100}
              r={70}
              stroke="url(#Gradient1)"
              strokeDasharray="628.3185307179587 628.3185307179587"
              strokeLinecap="round"
              strokeWidth={60}
            >
              <animate
                attributeName="stroke-dashoffset"
                dur="5s"
                repeatCount="indefinite"
                values="628.3185307179587;0;628.3185307179587"
              />
            </circle>
            <defs>
              <linearGradient
                id="Gradient1"
              >
                <stop
                  className="m78-spin-svg_stop1"
                  offset="0%"
                />
                <stop
                  className="m78-spin-svg_stop2"
                  offset="100%"
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
      </div>
      亥
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __circle __light __disabled"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <div
        className="m78 m78-spin __small __full"
        style={
          Object {
            "__progress": 0,
            "opacity": 0,
            "pointerEvents": "none",
            "visibility": "hidden",
          }
        }
      >
        <div
          className="m78-spin_inner"
          style={
            Object {
              "top": undefined,
            }
          }
        >
          <svg
            className="m78-spin-svg m78-spin_unit"
            fill="transparent"
            height={200}
            viewBox="0 0 200 200"
            width={200}
          >
            <circle
              className="m78-spin-svg_bg"
              cx={100}
              cy={100}
              r={70}
              strokeWidth={60}
            />
            <circle
              cx={100}
              cy={100}
              r={70}
              stroke="url(#Gradient1)"
              strokeDasharray="628.3185307179587 628.3185307179587"
              strokeLinecap="round"
              strokeWidth={60}
            >
              <animate
                attributeName="stroke-dashoffset"
                dur="5s"
                repeatCount="indefinite"
                values="628.3185307179587;0;628.3185307179587"
              />
            </circle>
            <defs>
              <linearGradient
                id="Gradient1"
              >
                <stop
                  className="m78-spin-svg_stop1"
                  offset="0%"
                />
                <stop
                  className="m78-spin-svg_stop2"
                  offset="100%"
                />
              </linearGradient>
            </defs>
          </svg>
        </div>
      </div>
      卯
    </button>
  </div>
</div>
`;

exports[`Button outline 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __primary __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    primary
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __red __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    red
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __green __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    green
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __orange __outline __light"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    yellow
  </button>
</div>
`;

exports[`Button size 1`] = `
<div>
  <button
    className="m78 m78-init m78-btn m78-effect __md __large"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    large
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    default
  </button>
  <button
    className="m78 m78-init m78-btn m78-effect __md __small"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    small
  </button>
  <div
    className="mt-16"
  >
    <button
      className="m78 m78-init m78-btn m78-effect __md __primary __large __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      large
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __red __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      default
    </button>
    <button
      className="m78 m78-init m78-btn m78-effect __md __green __small __light"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      small
    </button>
  </div>
</div>
`;
